tests/baselines/reference/evalAfter0.types
=== tests/cases/compiler/evalAfter0.ts ===
(0,eval)("10"); // fine: special case for eval
>(0,eval)("10") : 任意
>类型别名 :=> 任意
>(0,eval) : (x: 文字) => 任意
>0,eval : (x: 文字) => 任意
>0 : 0
>eval : (x: 文字) => 任意
>"10" : "10"

declare var eva;
>eva : 任意
>类型别名 :=> 任意

(0,eva)("10"); // error: no side effect left of comma (suspect of missing method name or something)
>(0,eva)("10") : 任意
>类型别名 :=> 任意
>(0,eva) : 任意
>类型别名 :=> 任意
>0,eva : 任意
>类型别名 :=> 任意
>0 : 0
>eva : 任意
>类型别名 :=> 任意
>"10" : "10"

